# wildergarden-vcv

./: .gitignore  .gitmodules  Makefile  build.sh  changelog.txt  plugin.json
.github/workflows/: build-plugin.yml
metamodule/: CMakeLists.txt  plugin-mm.json
metamodule/assets/: info.txt
res/components/: credits.txt
src/: Filter.cpp  Filter.h  FormantFetcher.h  OscillatorBank.h  Pascal.cpp  SawtoothOscillator.cpp  TheChatter.cpp  WildergardensWidgets.h  modmix.cpp  plugin.cpp  plugin.hpp
src/TheChatter/: EnvelopeHandler.cpp  EnvelopeHandler.h  ExternalInputProcessor.cpp  ExternalInputProcessor.h  FormantFetcher.cpp  FormantFetcher.h  OscillatorBank.cpp  OscillatorBank.h  PlosiveGenerator.cpp  PlosiveGenerator.h  SawtoothOscillator.h  TheChatter.cpp
